--- a/AbyssalGuardians.uproject
+++ b/AbyssalGuardians.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "AbyssalGuardians",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"CoreUObject"
+			]
 		}
 	],
 	"Plugins": [
